--- a/style.css
+++ b/style.css
@@ -620,8 +620,9 @@ footer a:hover {
      margin-top: 10px;
      /* flex-direction: column; */
      align-items: center;
-     justify-content: space-around;
-     padding: 0 60px;
+     text-align: center;
+     justify-content: center;
+     padding: 0 ;
     }
   
     .container-3 a.btn {
@@ -635,12 +636,18 @@ footer a:hover {
   display: grid;
   grid-template-columns: 1fr;
   gap: 50px;
+  align-items: center;
+  justify-content: center;
  }
 
  .box {
   display: block;
   padding: 15px;
-  width:100%
+  width:210px
  }
+footer {
 
+ padding: 20px;
+ font-size: 15px;
+}
 }
