--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ nav {
  /* position: fixed; */
  /* background: #0e132c; */
 }
+nav img{
+ width: 150px;
+}
 
 .nav-list {
  display: flex;
@@ -358,11 +361,16 @@ textarea {
 
 .pre-foot {
  display: flex;
- padding: 40px 70px;
+ padding: 40px 0;
  background-color: #212741;
- justify-content: space-around;
+ justify-content: center;
+ align-items: center;
 }
-
+.pre-foot img{
+ width: 150px;
+ padding: 0 10px;
+ margin-right: 30px;
+}
 
 
 
@@ -420,12 +428,12 @@ footer a:hover {
  }
 
  nav {
-  /* display: flex; */
   padding: 20px 40px;
   position: relative;
-  /* justify-content: space-between; */
  }
-
+ nav img{
+  width: 100px;
+ }
  .menu-btn {
   display: block;
   color: black;
@@ -587,7 +595,9 @@ footer a:hover {
  nav {
    background: #13141592;
   padding: 10px 20px;
-  
+  }
+  nav img{
+   width: 70px;
   }
   .header{
    margin-top: 10px;
@@ -643,11 +653,11 @@ footer a:hover {
  .box {
   display: block;
   padding: 15px;
-  width:210px
+  width:250px
  }
 footer {
 
  padding: 20px;
- font-size: 15px;
+ font-size: 14px;
 }
 }
