--- a/style.css
+++ b/style.css
@@ -19,10 +19,14 @@ body {
 }
 
 .container-1 {
- background: url(/Image/1-colorful-sweets-with-copy-space.jpg);
- /* padding: 30px 100px 50px; */
- background-size:cover;
- height: 100vh;
+   /* background: url(/Image/1-colorful-sweets-with-copy-space.jpg); */
+   background: linear-gradient(to right, #0e132cf5,#212741e1, #0e132cf5),url(/Image/6-low-qua.jpg) ;
+   /* padding: 30px 100px 50px; */
+   background-size:cover;
+   background-position-y: -200px;
+   
+   height: 100vh;
+   overflow: hidden;
 }
 
 
@@ -144,19 +148,21 @@ nav a {
 .header {
  display: flex;
  /* margin-top: 30px; */
- padding: 0 0 0 80px;
+ padding: 0 150px 0 80px;
  color: white;
  justify-content: space-between;
-
+ margin: auto 0;
+ position: relative;
 }
 
 .header img {
- transform: scaleX(-1);
- /* margin-top: 0px; */
+ /* transform: scaleX(-1); */
+ width: 450px;
+ z-index: 99;
 }
 
 .header-text {
- margin: auto 0 ;
+ margin: 40px 0 ;
  width: 50%;
 }
 
@@ -176,27 +182,105 @@ nav a {
  width: 40%;
  border-radius: 5px;
 }
+.header .fa-solid,.header .fa-regular{
+   position: absolute;
+   /* font-size: 50px; */
+}
+.f-dots{
+   right:250px;
+   font-size: 60px;
+   top: 410px;
+   color:#159e5a ;
+}
+.f-dots-2{
+   transform: rotate(90deg);
+   right: 500px;
+   font-size: 50px;
+   top: 40px;
+   opacity: .3;
+   color:orangered ;
+}
+.f-circle{
+   color: orangered;
+   right: 450px;
+   top: 100px;
+   font-size: 50px;
+   opacity: .7;
+   /* z-index: -1; */
+}
+.f-round{
+   color: #159e5a;
+   right: 160px;
+   top: 200px;
+   z-index: 1;
+   opacity: .7;
+   font-size: 60px;
+}
+.br-1{
+   color: #159e5a;
+   top: 20px;
+   font-size: 60px;
+   opacity: .4;
+   right: 200px;
+   transform: rotate(90deg);
+}
+
+.br-2{
+   color: orangered;
+   bottom: 0px;
+   right: 450px;
+   opacity: .3;
+   font-size: 60px;
+}
+.fa-play{
+   color: orangered;
+   opacity: .3;
+   /* transform: rotate(-90deg); */
+   right: 150px;
+   font-size: 40px;
+   top: 300px;
+}
 
 .container-2 {
  text-align: center;
- padding: 20px;
- margin-top: 40px;
+ padding:60px 20px;
+ /* margin-top: 40px; */
+ background-color:rgba(70, 68, 68, 0.275) ;
+ background-size: cover;
+ 
 }
 
 .about-seg {
  display: flex;
- padding: 60px;
+ padding: 10px 100px;
  align-items: center;
+ justify-content: space-between;
+ text-align: center;
+}
+.about-seg p {
+ font-size: 24px;
+ width: 70%;
 }
 
 .about-seg img {
- width: 400px;
- margin-bottom: -80px;
+   border-radius: 50%;
+   border: 3px solid #2bb36f;
+ width: 300px;
+ /* float: right; */
+ /* height: 400px; */
+ /* margin-bottom: -80px; */
 }
 
-.about-seg p {
- font-size: 22px;
+.ceo{
+   /* font-size: 20px; */
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
+
+ .about-seg h4 {
+    margin-top: 10px;
+ }
 
 .container-3 {
  display: flex;
@@ -209,6 +293,7 @@ nav a {
 
 .container-3 h1 {
  font-size: 40px;
+ text-align: center;
 }
 
 .container-3 a.btn {
@@ -478,12 +563,17 @@ footer a:hover {
 
 
  .container-2 h1 {
-  padding: 20px;
+  /* padding: 0; */
  }
+  .container-2 h3{
+   font-size: 16px;
+  }
 
  .about-seg {
-  width: 90%;
-  display: block;
+  /* width: 90%; */
+  /* display: block; */
+  flex-direction: column;
+  
   padding: 20px 5px;
   align-items: center;
  }
@@ -496,7 +586,9 @@ footer a:hover {
 
  .about-seg p {
   font-size: 17px;
+  width: 90%;
  }
+
 
  .container-3 {
   display: block;
