--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ nav a {
 .box {
  display: flex;
  align-items: center;
- padding: 20px;
+ /* padding: 20px; */
  background-color: #9b969654;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.2) 0 0 15px;
@@ -528,6 +528,10 @@ footer a:hover {
  .container-1 {
   /* width: 100vw; */
   padding:0 0 50px;
+   background: linear-gradient(to right, #0e132cf5, #212741e1, #0e132cf5), url(/Image/6-low-qua.jpg);
+      background-size: cover;
+      /* background-position-y: -200px; */
+      /* background-position-x: -60px; */
  }
 
  .header {
@@ -545,7 +549,10 @@ footer a:hover {
  .header img {
   display: none;
  }
-
+.header .fa-solid,
+.header .fa-regular {
+display: none;
+}
  .container-1 h1 {
   width: 80%;
  }
@@ -608,10 +615,12 @@ footer a:hover {
   /* border: 1px solid rgb(213, 208, 197); */
   display: block;
   text-align: center;
+  padding: 20px;
  }
 
  .box-icon {
   float: none;
+  margin: 10px;
  }
 
  #contact {
@@ -706,7 +715,9 @@ footer a:hover {
  .pre-foot .dis-2 {
   display: none;
  }
-
+.container-1{
+   background-position-x: -250px;
+}
 
  .header-text{
   margin: 0;
@@ -753,8 +764,11 @@ footer a:hover {
 
  .box {
   display: block;
-  padding: 15px;
+  padding:  15px;
   width:250px
+ }
+ .box-icon{
+   margin: 5px;
  }
 footer {
 
