--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav img{
  position: fixed;
  top: 0;
  right: 0;
- height: 100vh;
+ height: 80vh;
  width: 250px;
  z-index: 999;
  background-color: rgba(225, 225, 225, 0.2);
@@ -602,6 +602,9 @@ display: none;
   font-size: 15px;
   width: 100%;
  }
+ .ceo h4{
+   font-size: 18px;
+ }
 .text-dis{
    display: none;
 }
@@ -712,7 +715,7 @@ display: none;
 @media (max-width: 510px) {
 
  nav {
-   background: #0e132c47;
+   background: #0e132c76;
   padding: 10px 20px;
   }
   nav img{
@@ -753,13 +756,14 @@ display: none;
      /* flex-direction: column; */
      align-items: center;
      text-align: center;
-     justify-content: space-around;
+     justify-content: center;
      padding: 0 ;
     }
   
     .container-3 a.btn {
-     font-size: 12px;
-     padding:10px;
+     font-size: 10px;
+     padding:8px;
+     
     }
 /* .container-3{
    padding: 50px ;
