--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav img{
 }
 
 .bg-green {
- margin-right: 20px;
+ /* margin-right: 20px; */
  background: #159e5a;
  border: none;
 }
@@ -569,9 +569,6 @@ display: none;
 
 
 
- .container-2 h1 {
-  /* padding: 0; */
- }
   .container-2 h3{
    font-size: 16px;
   }
@@ -763,6 +760,7 @@ display: none;
     .container-3 a.btn {
      font-size: 10px;
      padding:8px;
+     margin-right: 10px;
      
     }
 /* .container-3{
