--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav img{
 }
 
 .bg-green {
- /* margin-right: 20px; */
+ margin-right: 20px;
  background: #159e5a;
  border: none;
 }
@@ -297,7 +297,7 @@ nav a {
 }
 
 .container-3 a.btn {
- padding: 15px 20px;
+ /* padding: 15px 20px; */
  font-size: 17px;
 }
 
@@ -726,7 +726,7 @@ display: none;
  }
 .container-1{
    background-position-x: -250px;
-   height: 100vh;
+   height: 98vh;
 }
 
  .header-text{
@@ -748,13 +748,14 @@ display: none;
  }
 
     .container-3 .buttons {
-     display: flex;
+     /* display: flex; */
      margin-top: 10px;
      /* flex-direction: column; */
-     align-items: center;
+     /* align-items: center; */
      text-align: center;
-     justify-content: space-around;
+     /* justify-content: space-around; */
      padding: 0;
+     /* width: 80%; */
     }
   
     .container-3 a.btn {
