--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ display: none;
   justify-content: space-between;
   text-align: center;
   color: white;
-
+  width: 100%;
   padding: 50px 50px;
  }
 
@@ -726,7 +726,7 @@ display: none;
  }
 .container-1{
    background-position-x: -250px;
-   height: 98vh;
+   height: 95vh;
 }
 
  .header-text{
