--- a/style.css
+++ b/style.css
@@ -297,8 +297,8 @@ nav a {
 }
 
 .container-3 a.btn {
- /* padding: 15px 20px; */
- font-size: 17px;
+ padding: 15px 20px;
+ /* font-size: 17px; */
 }
 
 .container-4 {
