--- a/style.css
+++ b/style.css
@@ -618,8 +618,8 @@ display: none;
  .container-3 .buttons {
   margin-top: 30px;
  }
- .container-3 a.btn{
-   font-size: 14px;
+ .container-3 .buttons a.btn{
+   font-size: 12px;
  }
 
  .box {
