--- a/style.css
+++ b/style.css
@@ -719,6 +719,21 @@ display: none;
  .pre-foot .dis {
   display: none;
  }
+
+ .to-top {
+
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+
+ }
+
+
+ .to-top.active {
+    bottom: 50px;
+    pointer-events: auto;
+    opacity: 1;
+ }
 }
 
 @media (max-width: 510px) {
